gtk-3.0/gtk.css
/* define theme colors
useful documentation:
* https://docs.gtk.org/gtk3/css-overview.html#specifying-colors-in-various-ways
*/

/* ######################### */
/* ### main theme colors ### */
/* ######################### */

/* used to identify where and what while working */
@define-color FINDME #2AC22C;
@define-color FINDME2 #FFBF00;

/* main window */
@define-color neutral01 #a3b1bf;			/* background */
@define-color neutral01-contrast #09090a;	/* textcolor */

/* use for borders */

@define-color border01-light		rgba(223, 223, 224, 0.66);	/* top */
@define-color border01-lightless	rgba(223, 223, 224, 0.33);	/* left */
@define-color border01-darkless		rgba(25, 25, 25, 0.33);		/* right */
@define-color border01-dark			rgba(25, 25, 25, 0.66);		/* bottom */

zzzexample {
	border-color: @border01-light @border01-darkless @border01-dark @border01-lightless;
}

/* some of the 1px outlines inside windows*/
@define-color neutral02 #b2c8d6;

/* CBT:	titlebar */
@define-color accent01 #e95678; /* backg */
@define-color accent01-contrast #dfdfe0; /* text */
	/* note: Below color is created and enforced on inactive titlebars
	 * of xfwm somewhere that I can't figure out. So I am just going
	 * with it and using sake color for gtk themes.
	 * TODO: Find out where the darkening is happening and consider
	 * another color. Especially for the text. */
@define-color accent01-dim rgba(171,51,79,1); /* inactive title backg */
@define-color accent01-dim-contrast rgba(83, 96, 110,1); /* inactive title text */
/* BackG:	inactive tabs, scrollbar */
@define-color accent03 #c1c8d6;
@define-color zaccent03 #ffc150;

@define-color black #000000;
@define-color black-off #09090a;
/* select list, filebrowser &other background */
@define-color white-off #FFF7E9;
@define-color workspacebg #6f717d;


/* ######################### */
/* ### other theme colors ### */
/* ######################### */
@define-color dimgray-575962 #575962;
@define-color dimgray-62646d #62646d;
@define-color dimgray-656979 #656979;
@define-color dimgray-686a75 #686a75;
@define-color dimgray-737373 #737373;
@define-color lightslategray-838795 #838795;
@define-color lightslategray-878ca0 #878ca0;
@define-color lightslategray-898d9a #898d9a;
@define-color lightslategray-8b8e9c #8b8e9c;
@define-color lightslategray-9196a9 #9196a9;
@define-color lightslategray-9397a8 #9397a8;
@define-color darkgray-979aa7 #979aa7;
@define-color darkgray-999999 #999999;
@define-color darkgray-9a9daa #9a9daa;
@define-color darkgray-9da0b0 #9da0b0;
@define-color darkgray-a4a8bb #a4a8bb;
@define-color darkgray-a5a9b9 #a5a9b9;
@define-color darkgray-abacb1 #abacb1;
@define-color darkgray-b3b3b3 #b3b3b3;
@define-color silver-bfbfbf #bfbfbf;
@define-color silver-c2c6d3 #c2c6d3;
@define-color black #232323;
@define-color black #252525;
@define-color black #2C2C2C;
@define-color black #2a2a2a;
@define-color black #2c2d31;
@define-color black #303030;
@define-color black #333333;
@define-color black01 #1a1a1a;
@define-color brown #884444;
@define-color brown #964242;
@define-color brown #9c4848;
@define-color brown #A74949;
@define-color cadetblue #468192;
@define-color cadetblue #4992A7;
@define-color chocolate #b86814;
@define-color chocolate #c86f10;
@define-color darkorange #FF8300;
@define-color darkorange #ec7c06;
@define-color darkorange #ff8d14;
@define-color darkorange #ff8f1a;
@define-color darkslateblue #334175;
@define-color darkslateblue #3a4a86;
@define-color darkslateblue-1f3d7a #1f3d7a;
@define-color gainsboro #d7dae3;
@define-color indianred #7e4242;
@define-color indianred #a9696e;
@define-color indianred #b96d6d;
@define-color indianred02 #b74d4d;
@define-color indianred02 #b94f4f;
@define-color lavenderblush #f7edf2;
@define-color lemonchiffon #FFFFBF;
@define-color maroon #642c2c;
@define-color maroon02 #593737;
@define-color palevioletred #dd88ae;
@define-color peru #7a4e1f;
@define-color peru #926a46;
@define-color peru #A77549;
@define-color purple #5f3a4b;
@define-color purple02 #724157;
@define-color rosybrown-ca9292 #ca9292;
@define-color royalblue #495DA7;
@define-color royalblue #4f66b9;
@define-color royalblue02 #1463ff;
@define-color royalblue02 #1a66ff;
@define-color slategray #757886;
@define-color slategray #767985;
@define-color slategray #787b87;
@define-color slategray #7c7f8d;
@define-color snow #f6eded;
@define-color thistle-e0b8ca #e0b8ca;
@define-color wheat #fbe4bc;
@define-color blue-bright01 #0055FF;
@define-color blue-bright02 #0653ec;
@define-color blue-bright03 #104ec8;
@define-color blue-bright04 #144bb8;

/* doesn't seem to do anything. delete later. '*/

/*
@define-color accent02 #a3b1bf;
*/

/* here are the RGBa values from the document (not replaced with variables):
rgba(0, 0, 0, 0.04)
rgba(0, 0, 0, 0.1)
rgba(0, 0, 0, 0.15)
rgba(0, 0, 0, 0.2)
rgba(0, 0, 0, 0.3)
rgba(0, 0, 0, 0.5)
rgba(0, 0, 0, 0.6)
rgba(0, 0, 0, 0.7)
rgba(0, 0, 0, 0.8)
rgba(0, 0, 0, 0.9)
rgba(174, 178, 195, 0.999)
rgba(255, 255, 255, 0.2)
rgba(255, 255, 255, 0.4)
rgba(255, 255, 255, 0.7)
rgba(255, 255, 255, 0.8)
rgba(255, 255, 255, 0.85)
rgba(255, 255, 255, 0.95)
*/



* {
  -GtkScrollbar-has-backward-stepper: true;
  -GtkScrollbar-has-forward-stepper: true;
  -GtkScrollbar-has-secondary-backward-stepper: false;
  -GtkScrollbar-has-secondary-forward-stepper: false;
  -GtkScrolledwindow-scrollbar-spacing: 0;
  -GtkScrolledwindow-scrollbars-within-bevel: 1;
  -GtkTextView-error-underline-color: @brown;
  -GtkToolbutton-icon-spacing: 6;
  -GtkToolItemGroup-expander-size: 11;
  -GtkWidget-text-handle-width: 20;
  -GtkWidget-text-handle-height: 20;
  -GtkDialog-button-spacing: 4;
  -GtkDialog-action-area-border: 0;
  -GtkTreeview-expander-size: 8;
  background-clip: padding-box;
  outline-width: 1px;
  outline-offset: -3px;
  outline-style: dashed;
  outline-color: @neutral02;
  -gtk-outline-radius: 0; }

.background {
  color: @black;
  background-color: rgba(174, 178, 195, 0.999); }
/* ... */

